<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/landing_page"
   >

    <TextView
        android:id="@+id/textView59"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/landing_page"
        android:textColor="#000"
        android:textSize="55sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.252" />


    <Button
        android:id="@+id/button7"
        android:layout_width="133dp"
        android:layout_height="49dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="304dp"
        android:background="@drawable/rounded_rectangle"
        android:focusable="true"
        android:gravity="center|center_vertical"
        android:paddingStart="25dp"
        android:paddingTop="15dp"
        android:paddingEnd="25dp"
        android:paddingBottom="15dp"
        android:text="@string/Button1"
        android:textAllCaps="false"
        android:textColor="@color/Jazzberry_Jam"
        android:textSize="17sp"
        android:onClick="click2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView59"
        app:layout_constraintVertical_bias="0.735" />

    <Button
        android:id="@+id/button11"
        android:layout_width="134dp"
        android:layout_height="55dp"
        android:layout_marginBottom="304dp"
        android:background="@drawable/rounded_rectangle2"
        android:focusable="true"
        android:gravity="center|center_vertical"
        android:onClick="click"
        android:paddingStart="25dp"
        android:paddingTop="15dp"
        android:paddingEnd="25dp"
        android:paddingBottom="15dp"
        android:text="@string/Button2"
        android:textAllCaps="false"
        android:textColor="#5D4037"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView59"
        app:layout_constraintVertical_bias="0.735" />

    <Button
        android:id="@+id/button9"
        android:layout_width="142dp"
        android:layout_height="56dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/round"
        android:focusable="true"
        android:gravity="center|center_vertical"
        android:onClick="Next_page"
        android:paddingStart="25dp"
        android:paddingTop="15dp"
        android:paddingEnd="25dp"
        android:paddingBottom="15dp"
        android:text="@string/Button3"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button7"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/button11"
        app:layout_constraintTop_toBottomOf="@+id/textView59"
        app:layout_constraintVertical_bias="0.155" />

    <Button
        android:layout_width="152dp"
        android:layout_height="53dp"
        android:background="@drawable/round2"
        android:focusable="true"
        android:gravity="center|center_vertical"
        android:paddingStart="25dp"
        android:paddingTop="15dp"
        android:paddingEnd="25dp"
        android:paddingBottom="15dp"
        android:text="@string/Button4"
        android:onClick="Video"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@+id/button9"
        app:layout_constraintEnd_toStartOf="@+id/button7"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toEndOf="@+id/button11"
        app:layout_constraintTop_toBottomOf="@+id/textView59"
        app:layout_constraintVertical_bias="0.518" />


</androidx.constraintlayout.widget.ConstraintLayout>