<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="#3490dc"
    android:layout_gravity="center">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ic_wave"
        tools:layout_editor_absoluteX="76dp"
        tools:layout_editor_absoluteY="87dp">

        <TextView
            android:id="@+id/textView44"
            android:layout_width="278dp"
            android:layout_height="20dp"
            android:gravity="center_horizontal"
            android:text="@string/Chowmein2"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView11"
            android:layout_width="412dp"
            android:layout_height="252dp"
            android:scaleType="fitXY"
            android:src="@drawable/noodles"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView44"
            app:srcCompat="@drawable/noodles" />

        <TextView
            android:id="@+id/textView56"
            android:layout_width="408dp"
            android:layout_height="215dp"
            android:layout_marginTop="4dp"
            android:text="@string/noodles"
            android:textColor="@color/black"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView11" />

        <ImageView
            android:id="@+id/imageView15"
            android:layout_width="216dp"
            android:src="@drawable/noodles2"
            android:layout_height="148dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView56"
            app:srcCompat="@drawable/noodles2"
            />

        <ImageView
            android:id="@+id/imageView16"
            android:layout_width="193dp"
            android:layout_height="148dp"
            android:scaleType="fitXY"
            android:src="@drawable/noodles3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView15"
            app:layout_constraintTop_toBottomOf="@+id/textView56"
            app:srcCompat="@drawable/noodles3"
           />

        <TextView
            android:id="@+id/textView57"
            android:layout_width="353dp"
            android:layout_height="41dp"
            android:gravity="center_horizontal"
            android:text="@string/Chowmein1"
            android:textColor="@color/white"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView15" />

        <Button
            android:id="@+id/button6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Chowmein_button"
            android:onClick="Next_page6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView57" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>